* add --wrap CLI option to control :wrap option (#11)
* add support for unconstrained formatting (em, strong, and codespan) (#6)
* escape all replaceable text (arrows and ellipses) when converting regular text
* replace double plus in codespan with \{pp} attribute reference
* escape attribute references in regular text
* use passthrough for codespan if text contains an attribute reference

=== Changed

* add replace_line method to Writer
* replace .md extension with .adoc in text of interdoc xref
* replace a non-breaking space with a single space instead of \{nbsp}

== 1.0.0.alpha.6 (2018-06-26) - @mojavelinux

=== Added

* add options and usage to CLI (#2)
* ensure directory of output file exists
* add option to enable automatic generation of IDs for section titles

=== Changed

* handle case when dd is nil
* handle case when dd has no primary text
* handle case when li has no primary text
* use writer to track list nesting level
* fix warnings

== 1.0.0.alpha.5 (2018-06-19) - @mojavelinux

=== Added

* recognize Hint as admonition label; map to TIP
* replace no-break space with \{nbsp}

=== Changed

* rewrite converter to use a structured writer
* remove blockquote enclosure around simple admonition block
* revert \&amp; back to &
* use separate list level for dl
* fold description list item to one line if primary text is a single line

== 1.0.0.alpha.4 (2018-06-12) - @mojavelinux

=== Added

* convert description (aka definition) lists (#8)
* detect menu reference and convert to inline menu macro
* add blank line above nested list that follows compound list item
* convert codeblock with non-contiguous lines beginning with a command prompt to a source,console listing block
* use list continuation to attach blockquote to list item
* handle case when HTML br element appears at start of paragraph
* allow blockquotes to be nested to an arbitrary depth
* remove trailing spaces from output
* convert deleted text span

=== Changed
