@@ -16,6 +16,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * replace double plus in codespan with \{pp} attribute reference
 * escape attribute references in regular text
 * use passthrough for codespan if text contains an attribute reference
+* use pass macro to escape literal codespan that contains ++
 
 === Changed
 
